feat: Added Spicord-Support

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,1 +1,14 @@
+loading.data_IOException=There was an IOException, when trying to regenerate the plugin's data folder.\n\
+Stacktrace:\n\
+%error%
+loading.embed.IOException=There was an IOException, whilst tying to get the message embed:\n\
+Detailed error:\n\
+%error%
+loading.spicord.bot_available=Yolo was configured to use Spicord, to announce deaths.
+loading.spicord.bot_unavailable=Yolo was configured to use Spicord, to announce deaths, but no bot was available!
 player.ban.death=[Yolo] You have died and therefore can no longer play on this hardcore server. :(
+sending.failed=There was an error sending the message.\n\
+Detailed error:\n\
+%error%
+sending.no_death_message=Died because of unspecified reason.
+sending.null_channel=The provided channel.id returned no suitable channel.
