--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,11 @@ $RECYCLE.BIN/
 *.lnk
 
 .gradle
-build/
+
+!build/
+build/*
+build/docs/*
+!build/docs/javadoc/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -109,10 +113,14 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
-**/build/
+**/build/*
+# Include the javadoc:
+!**/build/docs/javadoc/
 
 # Common working directory
 run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+
