--- a/.gitignore
+++ b/.gitignore
@@ -110,14 +110,8 @@ gradle-app.setting
 
 # Common working directory
 run/
+build/
+**build/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-
-
-/build/classes/
-/build/generated/
-/build/libs/
-/build/papermake/
-/build/resources/
-/build/tmp/
