--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -6,6 +6,10 @@ Detailed error:\n\
 %error%
 loading.spicord.bot_available=Yolo was configured to use Spicord, to announce deaths.
 loading.spicord.bot_unavailable=Yolo was configured to use Spicord, to announce deaths, but no bot was available!
+loading.spicord.failedMessageTemplate=There was an issue loading the message-template:\n\
+%error%\n\
+%stack_trace%
+loading.spicord.invalidId=Yolo was configured to use Spicord, but an invalid channel-id was provided!
 player.ban.death=[Yolo] You have died and therefore can no longer play on this hardcore server. :(
 sending.failed=There was an error sending the message.\n\
 Detailed error:\n\
