feat: Added support for custom resource-packs and toggleable "force" flag

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,9 +1,13 @@
+loading.configUpdateFail=Failed to update the config, because it couldn't be saved. Details:\n\
+%error%
 loading.data_IOException=There was an IOException, when trying to regenerate the plugin's data folder.\n\
 Stacktrace:\n\
 %error%
 loading.embed.IOException=There was an IOException, whilst tying to get the message embed:\n\
 Detailed error:\n\
 %error%
+loading.resourcePack.invalid=The configured resource-pack has failed to download, or the provided checksum is different.\n\
+The default pack will now be used.
 loading.spicord.bot_available=Yolo was configured to use Spicord, to announce deaths.
 loading.spicord.bot_unavailable=Yolo was configured to use Spicord, to announce deaths, but no bot was available!
 loading.spicord.failedMessageTemplate=There was an issue loading the message-template:\n\
