feat: Added possibility to send user-customizable chat messages.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,10 +5,19 @@ resource-pack:
     use: false
     url: ""
     sha1: ""  # You can use https://emn178.github.io/online-tools/sha1_checksum.html or a CLI-Tool to obtain the sha1-checksum.
+
 # Set a channel-id and send to true, if you want to announce a death on a discord channel.
 spicord:
   send: false
   message_channel_id: ""
 
+announce:
+  death:
+    discord: false
+    chat: false
+  totem:
+    discord: false
+    chat: false
+
 ### ↓ DO NOT CHANGE! ↓ ###
-config_version: 2
+config_version: 3
