--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,11 +1,5 @@
 loading.configUpdateFail=Failed to update the config, because it couldn't be saved. Details:\n\
 %error%
-loading.data_IOException=There was an IOException, when trying to regenerate the plugin's data folder.\n\
-Stacktrace:\n\
-%error%
-loading.embed.IOException=There was an IOException, whilst tying to get the message embed:\n\
-Detailed error:\n\
-%error%
 loading.resourcePack.invalid=The configured resource-pack has failed to download, or the provided checksum is different.\n\
 The default pack will now be used.
 loading.spicord.bot_available=Yolo was configured to use Spicord, to announce deaths.
@@ -15,8 +9,12 @@ loading.spicord.failedMessageTemplate=There was an issue loading the message-tem
 %stack_trace%
 loading.spicord.invalidId=Yolo was configured to use Spicord, but an invalid channel-id was provided!
 player.ban.death=[Yolo] You have died and therefore can no longer play on this hardcore server. :(
-sending.failed=There was an error sending the message.\n\
+spicord.sending.failed=There was an error sending the message.\n\
 Detailed error:\n\
 %error%
-sending.no_death_message=Died because of unspecified reason.
-sending.null_channel=The provided channel.id returned no suitable channel.
+spicord.sending.nullChannel=The provided channel.id returned no suitable channel.
+chatManager.noMessage=Couldn't find the message, that was requested to be sent.\n\
+Blame something in the stack:\n\
+%trace%
+chatManager.initFailedUserProvided=Failed to use the user provided chat messages! Are they \
+accessible under "./plugins/yolo/chat_messages.properties"?
