fix: Fixed several bugs, that occurred during tests. - Fixed, that only the last placeholder would be replaced in customizable messages. - Fixed, that the SpicordManager was initialized without Spicord being present, leading to `ClassNotFound` exceptions. - Fixed some minor inconsistencies.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,5 +19,5 @@ announce:
     discord: false
     chat: false
 
-### ↓ DO NOT CHANGE! ↓ ###
+### DO NOT CHANGE CONFIG VERSION! ###
 config_version: 3
