--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,7 +2,7 @@ loading.configUpdateFail=Failed to update the config, because it couldn't be sav
 %error%
 loading.resourcePack.invalid=The configured resource-pack has failed to download, or the provided checksum is different.\n\
 The default pack will now be used.
-loading.spicord.bot_available=Yolo was configured to use Spicord, to announce deaths.
+loading.spicord.bot_available=Yolo was configured to use Spicord, to announce events.
 loading.spicord.bot_unavailable=Yolo was configured to use Spicord, to announce deaths, but no bot was available!
 loading.spicord.failedMessageTemplate=There was an issue loading the message-template:\n\
 %error%\n\
