--- a/src/main/resources/chat_messages.properties
+++ b/src/main/resources/chat_messages.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 # Uses MiniMessage
-announce.death = [<red>Yolo</red>] » <gold>%player_name% </gold><#c0c0c0>is now taking a </#c0c0c0><red>forever break </red><#c0c0c0>now.<#/c0c0c0>
+announce.death = [<red>Yolo</red>] » <gold>%player_name% </gold><#c0c0c0>is now taking a </#c0c0c0><red>forever break </red><#c0c0c0>now.</#c0c0c0>
 announce.totem = [<red>Yolo</red>] » <gold>%player_name% </gold><green>narrowly avoided </green><#c0c0c0>the "forever break"... for now.</#c0c0c0>
 
 ### DO NOT CHANGE: ###
