feat: Added the possibility to revive a player.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -9,6 +9,10 @@ loading.spicord.failedMessageTemplate=There was an issue loading the message-tem
 %stack_trace%
 loading.spicord.invalidId=Yolo was configured to use Spicord, but an invalid channel-id was provided!
 player.ban.death=[Yolo] You have died and therefore can no longer play on this hardcore server. :(
+player.saveInventory.offline=Unable to save the inventory on death, as the player is offline!\n\
+Inventory will not be restorable on the next join.
+player.revive.noLastDeath=The last death location of the player %player_name% to be revived wasn't found. The player \
+will stay at their respawn point.
 spicord.sending.failed=There was an error sending the message.\n\
 Detailed error:\n\
 %error%
@@ -18,3 +22,11 @@ Blame something in the stack:\n\
 %trace%
 chatManager.initFailedUserProvided=Failed to use the user provided chat messages! Are they \
 accessible under "./plugins/yolo/chat_messages.properties"?
+player.revive.unsafeTeleport=%player_name% has not been teleported to their last death \
+location on revive, because no safe location could be \
+determined.
+player.revive.notOnline=Tried to revive %player_uuid% during, but they appear to be \
+offline!\
+player.revive.noReviveInventory=The player %player_name% has no stored inventory, that could \
+be restored on revive.
+player.revive.noReviveInventory=The player
