Multiple things changed (see description): fix(PlayerManager): Fixed the revive mechanic often not working correctly fix(PlayerManager): Fixed the safe teleportation mechanic on revival. feat: Added command `checkout_death_location` for admins to look for potentially duplicate items.

--- a/src/main/resources/chat_messages.properties
+++ b/src/main/resources/chat_messages.properties
@@ -1,7 +1,27 @@
+#
+# This is program is a plugin for Minecraft Servers called "Yolo".
+# Copyright (C) 2023  eingruenesbeb
+#
+#     This program is free software: you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation, either version 3 of the License, or any later version.
+#
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+#
+#     You should have received a copy of the GNU General Public License
+#     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
+# You can reach the original author via e-Mail: agreenbeb@gmail.com
+#
+
 # suppress inspection "UnusedProperty" for whole file
 # Uses MiniMessage
 announce.death = [<red>Yolo</red>] » <gold>%player_name% </gold><#c0c0c0>is now taking a </#c0c0c0><red>forever break </red><#c0c0c0>now.</#c0c0c0>
 announce.totem = [<red>Yolo</red>] » <gold>%player_name% </gold><green>narrowly avoided </green><#c0c0c0>the "forever break"... for now.</#c0c0c0>
+system.playerOnlyCommand = [<red>Yolo</red>] » <red>You must be a player to do this!</red>
 
 ### DO NOT CHANGE: ###
-version = 1
+version = 2
