--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,10 +14,10 @@ spicord:
 announce:
   death:
     discord: false
-    chat: false
+    chat: true
   totem:
     discord: false
-    chat: false
+    chat: true
 
 enable_on_non_hc: false
 
