--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,7 @@ api-version: 1.19
 softdepend: [ AdvancedBan, Spicord ]
 libraries:
   - "org.jetbrains.kotlin:kotlin-stdlib:1.8.20-RC"
+  - "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
 
 default-permission: op
 permissions:
@@ -27,6 +28,11 @@ commands:
     permission-message: You don't have permission to use that command!
   revive:
     description: Revives a player, that has died, whilst trying to restore the player's inventory and position.
-    usage: /revive [player name]
+    usage: "Usage: `/revive [player name]` (make sure, that the player-name is valid!)"
     permission: yolo.revive
     permission-message: You don't have permission to use that command!
+  checkout_death_location:
+    description: Teleports you to the death location, of a revivable player. Useful for checking for duplicate items.
+    usage: "Usage: `/checkout_death_location [player name]` (player must be revivable!)"
+    permission: yolo.revive
+    permission-message: You don't have the permission to use that command!
