feat: Added features requested in #4 (Needs testing though...)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,6 +20,7 @@ announce:
     chat: true
 
 enable_on_non_hc: false
+easy_disable: false
 
 ### DO NOT CHANGE CONFIG VERSION! ###
-config_version: 4
+config_version: 5
