refactor: Moved teleportation methods to TeleportationUtils.kt and added additional checks.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -19,7 +19,7 @@ Blame something in the stack:\n\
 %trace%
 chatManager.initFailedUserProvided=Failed to use the user provided chat messages! Are they \
 accessible under "./plugins/yolo/chat_messages.properties"?
-player.revive.unsafeTeleport=%player_name% has not been teleported to their last death \
+player.unsafeTeleport=%player_name% has not been teleported to their last death \
 location on revive, because no safe location could be \
 determined.
 player.revive.notOnline=Tried to revive %player_uuid% during, but they appear to be \
