Multiple changes (see description): - feat: The `/revive` command has additional inputs - feat: Ability to disable inventory restoring and teleportation on revive - chore: Added command feedback and additional log-messages - refactor: Completely removed AdvancedBan functionality and dependency.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -30,4 +30,10 @@ player.load.corrupted=The data in /data/yolo_player_data.json is corrupted! Fix 
 manually or delete the file in order to fix this!
 player.unload.failure=Failed to write the player-data. Is \
 "/data/yolo_player_data.json" accessible?
+player.revive.attempt=Attempting to revive %player_name%...
+player.revive.invalidTeleport=Attempted to teleport the player to their last death \
+location, but no valid one was found!
+system.reloaded=Yolo has successfully been reloaded.
+system.setRevive=The player %player_name% has successfully been set to be \
+revived upon their next join.
 
