--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -28,12 +28,14 @@ player.load.fail=Failed to load the file containing the user-data! Yolo will \
 now assume every player to be alive and not to revive!
 player.load.corrupted=The data in /data/yolo_player_data.json is corrupted! Fix it \
 manually or delete the file in order to fix this!
-player.unload.failure=Failed to write the player-data. Is \
+player.saveData.failure=Failed to write the player-data. Is \
 "/data/yolo_player_data.json" accessible?
 player.revive.attempt=Attempting to revive %player_name%...
 player.revive.invalidTeleport=Attempted to teleport the player to their last death \
 location, but no valid one was found!
 system.reloaded=Yolo has successfully been reloaded.
-system.setRevive=The player %player_name% has successfully been set to be \
+player.setRevive=The player %player_name% has successfully been set to be \
 revived upon their next join.
+player.saveData.start=Saving player data...
+player.saveData.success=Sucessfully saved the player-data.
 
