Multiple things: feat: Instead of giving the player effects upon teleportation, they are now set into a ghost-like state, which is removed upon hostile actions. It lasts 600 ticks (30s@20TPS) refactor: Cleaned up the code a little and replaced logging calls with their lazy variants docs: Updated documentation

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -45,3 +45,5 @@ To:\n\
 %new_outcome%
 player.revive.outcome.reason=The reasoning is:\n\
 %reason%
+player.removeGhostState.notOnline=Couldn't remove the effects from the revival off of \
+%uuid%! The player doesn't appear to be online.
