style: Fixed some typos

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -37,5 +37,5 @@ system.reloaded=Yolo has successfully been reloaded.
 player.setRevive=The player %player_name% has successfully been set to be \
 revived upon their next join.
 player.saveData.start=Saving player data...
-player.saveData.success=Sucessfully saved the player-data.
+player.saveData.success=Successfully saved the player-data.
 
