feat: Added dispatched events to the revival process.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -30,7 +30,7 @@ player.load.corrupted=The data in /data/yolo_player_data.json is corrupted! Fix 
 manually or delete the file in order to fix this!
 player.saveData.failure=Failed to write the player-data. Is \
 "/data/yolo_player_data.json" accessible?
-player.revive.attempt=Attempting to revive %player_name%...
+player.revive.attempt=Attempting to revive %player_uuid%...
 player.revive.invalidTeleport=Attempted to teleport the player to their last death \
 location, but no valid one was found!
 system.reloaded=Yolo has successfully been reloaded.
@@ -38,4 +38,11 @@ player.setRevive=The player %player_name% has successfully been set to be \
 revived upon their next join.
 player.saveData.start=Saving player data...
 player.saveData.success=Successfully saved the player-data.
+player.revive.outcome.changed=The outcome of the revive process was changed by %plugin% \
+from:\n\
+%original_outcome%\n\
+To:\n\
+%new_outcome%
+player.revive.outcome.reason=The reasoning is:\n\
+%reason%
 
