feat: Reviving a player can now trigger a chat and discord message.

--- a/src/main/resources/chat_messages.properties
+++ b/src/main/resources/chat_messages.properties
@@ -2,7 +2,8 @@
 # Uses MiniMessage
 announce.death = [<red>Yolo</red>] » <gold>%player_name% </gold><#c0c0c0>is now taking a </#c0c0c0><red>forever break </red><#c0c0c0>now.</#c0c0c0>
 announce.totem = [<red>Yolo</red>] » <gold>%player_name% </gold><green>narrowly avoided </green><#c0c0c0>the "forever break"... for now.</#c0c0c0>
+announce.revive = [<red>Yolo</red>] » <gold>%player_name% </gold>has been <green>revived</green>!
 system.playerOnlyCommand = [<red>Yolo</red>] » <red>You must be a player to do this!</red>
 
 ### DO NOT CHANGE: ###
-version = 2
+version = 3
