--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -38,11 +38,10 @@ player.setRevive=The player %player_name% has successfully been set to be \
 revived upon their next join.
 player.saveData.start=Saving player data...
 player.saveData.success=Successfully saved the player-data.
-player.revive.outcome.changed=The outcome of the revive process was changed by %plugin% \
-from:\n\
+player.revive.outcome.changed=The outcome of the revive process was changed by %plugin%.\n\
+From:\n\
 %original_outcome%\n\
 To:\n\
 %new_outcome%
 player.revive.outcome.reason=The reasoning is:\n\
 %reason%
-
