--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,9 +18,12 @@ announce:
   totem:
     discord: false
     chat: true
+  revive:
+    discord: false
+    chat: true
 
 enable_on_non_hc: false
 easy_disable: false
 
 ### DO NOT CHANGE CONFIG VERSION! ###
-config_version: 5
+config_version: 6
