--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ prefix: Yolo
 version: '${version}'
 main: io.github.eingruenesbeb.yolo.Yolo
 api-version: 1.19
-softdepend: [ AdvancedBan, Spicord ]
+softdepend: [ Spicord ]
 libraries:
   - "org.jetbrains.kotlin:kotlin-stdlib:1.8.20-RC"
   - "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
