--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,9 +1,9 @@
-loading.configUpdateFail=Failed to update the config, because it couldn't be saved. Details:\n\
+loading.configUpdateFail=Failed to update the config because it couldn't be saved. Details:\n\
 %error%
 loading.resourcePack.invalid=The configured resource-pack has failed to download, or the provided checksum is different.\n\
 The default pack will now be used.
-loading.spicord.bot_available=Yolo was configured to use Spicord, to announce events.
-loading.spicord.bot_unavailable=Yolo was configured to use Spicord, to announce deaths, but no bot was available!
+loading.spicord.bot_available=Yolo was configured to use Spicord to announce events.
+loading.spicord.bot_unavailable=Yolo was configured to use Spicord to announce deaths, but no bot was available!
 loading.spicord.failedMessageTemplate=There was an issue loading the message-template:\n\
 %error%\n\
 %stack_trace%
@@ -14,7 +14,7 @@ spicord.sending.failed=There was an error sending the message.\n\
 Detailed error:\n\
 %error%
 spicord.sending.nullChannel=The provided channel.id returned no suitable channel.
-chatManager.noMessage=Couldn't find the message, that was requested to be sent.\n\
+chatManager.noMessage=Couldn't find the message that was requested to be sent.\n\
 Blame something in the stack:\n\
 %trace%
 chatManager.initFailedUserProvided=Failed to use the user provided chat messages! Are they \
@@ -37,8 +37,8 @@ system.reloaded=Yolo has successfully been reloaded.
 player.setRevive=The player %player_name% has successfully been set to be \
 revived upon their next join.
 player.saveData.start=Saving player data...
-player.saveData.success=Successfully saved the player-data.
-player.revive.outcome.changed=The outcome of the revive process was changed by %plugin%.\n\
+player.saveData.success=Successfully saved the player data.
+player.revive.outcome.changed=The outcome of the revive-process was changed by %plugin%.\n\
 From:\n\
 %original_outcome%\n\
 To:\n\
