--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,11 +5,11 @@ prefix: Yolo
 
 version: '${version}'
 main: io.github.eingruenesbeb.yolo.Yolo
-api-version: 1.20.1
+api-version: 1.21
 softdepend: [ Spicord ]
 libraries:
-  - "org.jetbrains.kotlin:kotlin-stdlib:1.8.20-RC"
-  - "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
+  - "org.jetbrains.kotlin:kotlin-stdlib:2.0.0"
+  - "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 
 default-permission: op
 permissions:
