feat: Added command `undo_revive`.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -47,3 +47,6 @@ player.revive.outcome.reason=The reasoning is:\n\
 %reason%
 player.removeGhostState.notOnline=Couldn't remove the effects from the revival off of \
 %uuid%! The player doesn't appear to be online.
+player.revive.undo.fail=[<red>Yolo</red>] » <red>This player hasn't been revived yet or doesn't exist.</red>
+player.revive.undo.success=[<red>Yolo</red>] » <green>Last successful revive has been undone.</green>
+player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but they appear to be offline!
