refactor: Cleaned up `PlayerManager` and switched data format to CBOR with one filer per player.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -24,12 +24,11 @@ location on revive, because no safe location could be \
 determined.
 player.revive.notOnline=Tried to revive %player_uuid% during, but they appear to be \
 offline!
-player.load.fail=Failed to load the file containing the user-data! Yolo will \
-now assume every player to be alive and not to revive!
-player.load.corrupted=The data in /data/yolo_player_data.json is corrupted! Fix it \
-manually or delete the file in order to fix this!
-player.saveData.failure=Failed to write the player-data. Is \
-"/data/yolo_player_data.json" accessible?
+player.load.corruptedDir=The data in /data is corrupted! Fix it manually or delete the broken directory or files in order to fix this! \
+See the discord server for help: https://discord.gg/zMqkeRseME
+player.saveData.failure=Failed to write the player-data for %uuid%. :(\n\
+Here are the details:\
+%error%
 player.revive.attempt=Attempting to revive %player_uuid%...
 player.revive.invalidTeleport=Attempted to teleport the player to their last death \
 location, but no valid one was found!
@@ -50,3 +49,6 @@ player.removeGhostState.notOnline=Couldn't remove the effects from the revival o
 player.revive.undo.fail=[<red>Yolo</red>] » <red>This player hasn't been revived yet or doesn't exist.</red>
 player.revive.undo.success=[<red>Yolo</red>] » <green>Last successful revive has been undone.</green>
 player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but they appear to be offline!
+player.load.corruptedFile=The player-data of %uuid% is corrupted. Please fix manually or delete the file. \
+See the discord server for help: https://discord.gg/zMqkeRseME
+loading.playerDataNotADirectory=%path% should be a directory! Please rename or delete!
