--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,6 +10,7 @@ softdepend: [ Spicord ]
 libraries:
   - "org.jetbrains.kotlin:kotlin-stdlib:2.0.20"
   - "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
+  - "org.jetbrains.kotlinx:kotlinx-serialization-cbor:1.6.3"
 
 default-permission: op
 permissions:
