fix: Player-data will now not get unnecessarily saved on load.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -52,3 +52,6 @@ player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but t
 player.load.corruptedFile=The player-data of %uuid% is corrupted. Please fix manually or delete the file. \
 See the discord server for help: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% should be a directory! Please rename or delete!
+player.load.start=Loading player data...
+player.load.success=Player-data was successfully loaded.\n\
+Auto-save is now enabled.
