chore: Improved user-facing logging of PlayerManager actions.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -29,14 +29,13 @@ See the discord server for help: https://discord.gg/zMqkeRseME
 player.saveData.failure=Failed to write the player-data for %uuid%. :(\n\
 Here are the details:\
 %error%
-player.revive.attempt=Attempting to revive %player_uuid%...
 player.revive.invalidTeleport=Attempted to teleport the player to their last death \
 location, but no valid one was found!
 system.reloaded=Yolo has successfully been reloaded.
-player.setRevive=The player %player_name% has successfully been set to be \
+player.revive.set=[<red>Yolo</red>] » The player <gold>%player_name%</gold> has successfully been set to be \
 revived upon their next join.
 player.saveData.start=Saving player data...
-player.saveData.success=Successfully saved the player data.
+player.saveData.done=Successfully saved the player data.
 player.revive.outcome.changed=The outcome of the revive-process was changed by %plugin%.\n\
 From:\n\
 %original_outcome%\n\
@@ -52,6 +51,13 @@ player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but t
 player.load.corruptedFile=The player-data of %uuid% is corrupted. Please fix manually or delete the file. \
 See the discord server for help: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% should be a directory! Please rename or delete!
+player.load.legacyConversion.fail=Failed to convert legacy player-data.
+player.load.legacyConversion.success=Successfully converted legacy player-data to new format.
+player.deathBan.onJoin=Player %uuid% was denied access to the server, because they're dead.
+player.deathBan.kick=Player %uuid% has been banned for being dead on hardcore mode.
 player.load.start=Loading player data...
 player.load.success=Player-data was successfully loaded.\n\
 Auto-save is now enabled.
+
+
+
