test: Make managers no longer singletons for testing purposes. Also fix `SingularPlayerAutoSave` sometimes blocking shutdown with `isRunning` check.

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -47,7 +47,7 @@ player.removeGhostState.notOnline=Couldn't remove the effects from the revival o
 %uuid%! The player doesn't appear to be online.
 player.revive.undo.fail=[<red>Yolo</red>] » <red>This player hasn't been revived yet or doesn't exist.</red>
 player.revive.undo.success=[<red>Yolo</red>] » <green>Last successful revive has been undone.</green>
-player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but they appear to be offline!
+player.revive.undo.notOnline=Tried to undo revive of %player_uuid% during, but they appear to be offline.
 player.load.corruptedFile=The player-data of %uuid% is corrupted. Please fix manually or delete the file. \
 See the discord server for help: https://discord.gg/zMqkeRseME
 loading.playerDataNotADirectory=%path% should be a directory! Please rename or delete!
